Create Durable Scenario